--- a/src/gui/loginScreen.fxml
+++ b/src/gui/loginScreen.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -30,6 +31,26 @@
             <Label layoutY="40.0" text="GoNature" textFill="#4cd989">
                <font>
                   <Font name="Poor Richard" size="60.0" />
+               </font>
+            </Label>
+         </children>
+      </Pane>
+      <Pane layoutX="74.0" layoutY="253.0">
+         <children>
+            <TextField fx:id="portT" layoutX="65.0" promptText="Enter Port" />
+            <Label layoutX="34.0" layoutY="3.0" text="Port:">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
+         </children>
+      </Pane>
+      <Pane layoutX="76.0" layoutY="214.0">
+         <children>
+            <TextField fx:id="ipAddressT" layoutX="65.0" promptText="Enter IP" />
+            <Label layoutX="-4.0" layoutY="3.0" text="IP Address:">
+               <font>
+                  <Font name="System Bold" size="12.0" />
                </font>
             </Label>
          </children>
